{
    "name": "Controllers",
    "maps": [
        {
            "name": "Gamepad",
            "id": "0988fceb-269d-46ad-89ad-b1056a246746",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ce4785bb-ab29-4e62-a899-a029c62e3c89",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ButtonUp",
                    "type": "Button",
                    "id": "6de4fdd0-d16d-49a9-a907-254b153d46dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonDown",
                    "type": "Button",
                    "id": "a16bf983-9677-4b7c-9c8d-e5ecef08390a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonRight",
                    "type": "Button",
                    "id": "974af203-59ba-445b-90b6-77ef34caba3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonLeft",
                    "type": "Button",
                    "id": "042ec834-4e93-4180-a112-e9c8b2aec8a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stopping",
                    "type": "Button",
                    "id": "b7c4b6f4-10a9-4443-bf20-009e536f3c0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4bfb075d-5f82-4be4-8be6-2160ded6cf2b",
                    "path": "<iOSGameController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "IOS Gamepad1",
                    "action": "ButtonUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "093acc88-6074-4598-b19a-b259bd7ffd1c",
                    "path": "<AndroidGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "ButtonUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "495e5947-c6ac-40a4-a72c-e061737a365a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ButtonUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bbccf9f-e702-40e3-bab9-1a66cdd7a236",
                    "path": "<iOSGameController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "IOS Gamepad1",
                    "action": "ButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ba7d4b1-87b8-4e7c-8770-4069b8ac27c4",
                    "path": "<AndroidGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "ButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "585de26f-89f9-43d4-8af9-6b3ef0546b2d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c70254a5-0d61-44a6-a308-aacc68581864",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2e8f26a-c2c9-4eef-951f-fa475ec81332",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4cc9ba3-3df7-4f3e-9979-63aa36e2001f",
                    "path": "<HID::XiYuan GAME CONTOROLER>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "ButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71f7e3bd-63dc-4e01-a096-39fcc1d4cb4b",
                    "path": "<iOSGameController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "IOS Gamepad1",
                    "action": "ButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f59a6f78-ba92-4067-b721-4cb8d879ef4d",
                    "path": "<AndroidGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "ButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c81356e-5cc6-4419-bf38-11bcaebb7680",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2972ffa-ac8e-4da8-9bb6-034e330958b7",
                    "path": "<HID::XiYuan GAME CONTOROLER>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "ButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42fe18e0-e538-4cf8-ba03-26333f8eed37",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1fadd25-e68d-4ccf-9523-63cbc63d01d0",
                    "path": "<iOSGameController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "IOS Gamepad1",
                    "action": "ButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0036858b-0398-463f-bbd2-288d78c55926",
                    "path": "<AndroidGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "ButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ce26f4b-24d7-4b6d-940b-38e2c92d1ae0",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76d629fa-7143-40ee-95d1-1159b9d579df",
                    "path": "<HID::XiYuan GAME CONTOROLER>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "ButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d852aa6-e35c-4009-b181-8903b8c07845",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50f3437a-c504-4349-b61a-26d95585b20b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Stopping",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "4e028803-2539-4bc3-a4c9-5694386c62aa",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4fef7bc0-b7ae-40dc-b3da-f7ce8906e0fe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "933126b5-3941-4553-8d50-91d3764f9d1d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2e78ddb6-0f89-44ac-a238-7ff616cfab2b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "93df5605-38bc-453c-b4f3-6394d61c6ada",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "321a71f4-71dd-4f71-8139-821341a18c19",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a0da98ba-35d4-4487-9866-bea4eec2223c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0b79cdbf-a554-4507-8ce4-10583e108d54",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e4a523d0-8148-4204-95c9-bb5bbcd0ff58",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b7c5532f-52bf-414a-808a-5aa6dd82f242",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Controller",
                    "id": "a40c262c-168f-4ba9-a5cd-ce0561165a86",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e3c657e5-617e-4746-9dc5-6ad8ab939bf0",
                    "path": "<HID::XiYuan GAME CONTOROLER>/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4da21bc3-abbd-4f60-83ec-fd8c60fe4786",
                    "path": "<HID::XiYuan GAME CONTOROLER>/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "812ad493-6051-4f70-80e1-365a8b283df0",
                    "path": "<HID::XiYuan GAME CONTOROLER>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9190d94f-1e51-470c-9f7e-733a51c47105",
                    "path": "<HID::XiYuan GAME CONTOROLER>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Android Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Xbox_Contrroller",
                    "id": "7142e465-2560-41f7-a4ba-00772ca8c8c5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7ab52f59-6dbd-4a3e-96cd-96a81f1ee4fe",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bd37be7f-1059-4a62-921d-50019973cfc6",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "90ad5491-05d1-4e98-99b1-fba159475988",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9f54a425-6e73-4a41-ac4b-951da5253aae",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "xBOX_CONT_JOYSTICK",
                    "id": "e7d8aa25-fed2-4d19-8c9a-94d6c51a08ab",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cfe71450-3b9f-467a-9486-dd980f005bb2",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "12a1c45e-3885-47f1-b696-a2e4040607da",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6931a8ec-ff37-4bdd-8f3f-dc866610adae",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "41f8b2a7-8984-4f95-973f-e2e1fbc78f77",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Android Gamepad",
            "bindingGroup": "Android Gamepad",
            "devices": []
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        },
        {
            "name": "IOS Gamepad1",
            "bindingGroup": "IOS Gamepad1",
            "devices": []
        }
    ]
}